--- a/index.html
+++ b/index.html
@@ -202,10 +202,10 @@
                           <a href="/history" class="menu-link"
                             >History of Club</a
                           >
-                          <a href="/brisbane-knights" class="menu-link"
+                          <a href="/brisbane-knights-football-club.html" class="menu-link"
                             >Brisbane Knights Soccer Team</a
                           >
-                          <a href="/zlatni-du kati" class="menu-link"
+                          <a href="/zlatni-dukati-dance-group.html" class="menu-link"
                             >Zlatni Dukati Dance Group</a
                           >
                           <a href="/venues" class="menu-link">Venue Hire</a>
