--- a/members-lounge.html
+++ b/members-lounge.html
@@ -146,8 +146,8 @@
       <a href="/" class="menu-link">Home</a>
       <a href="/about" class="menu-link">About</a>
       <a href="/history" class="menu-link">History of Club</a>
-      <a href="/brisbane-knights" class="menu-link">Brisbane Knights Soccer Team</a>
-      <a href="/zlatni-du kati" class="menu-link">Zlatni Dukati Dance Group</a>
+      <a href="/brisbane-knights-football-club.html" class="menu-link">Brisbane Knights Soccer Team</a>
+      <a href="/zlatni-dukati-dance-group.html" class="menu-link">Zlatni Dukati Dance Group</a>
       <a href="/venues" class="menu-link">Venue Hire</a>
       <a href="/contact" class="menu-link">Contact</a>
       <a href="/membership" class="menu-link menu-link-cta">Become a Member</a>
