link fix for index

--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
                 <div class="padding-horizontal padding-medium">
                   <div class="navbar-left">
                     <a
-                      href="/"
+                      href=""
                       aria-current="page"
                       class="navbar-brand w-nav-brand w--current"
                       ><img
@@ -126,7 +126,7 @@
                 <div class="padding-horizontal padding-medium">
                   <nav role="navigation" class="navbar-right w-nav-menu">
                     <a
-                      href="/services"
+                      href="services"
                       class="button is-icon hide-tablet w-inline-block"
                       ><div class="clip">
                         <div class="button-text">
@@ -198,20 +198,20 @@
 
                         <!-- main nav links -->
                         <div class="menu-links">
-                          <a href="/" class="menu-link">Home</a>
-                          <a href="/about" class="menu-link">About</a>
-                          <a href="/history" class="menu-link"
+                          <a href="" class="menu-link">Home</a>
+                          <a href="about" class="menu-link">About</a>
+                          <a href="history" class="menu-link"
                             >History of Club</a
                           >
-                          <a href="/brisbane-knights-football-club.html" class="menu-link"
+                          <a href="brisbane-knights-football-club.html" class="menu-link"
                             >Brisbane Knights Soccer Team</a
                           >
-                          <a href="/zlatni-dukati-dance-group.html" class="menu-link"
+                          <a href="zlatni-dukati-dance-group.html" class="menu-link"
                             >Zlatni Dukati Dance Group</a
                           >
-                          <a href="/venues" class="menu-link">Venue Hire</a>
-                          <a href="/contact" class="menu-link">Contact</a>
-                          <a href="/membership" class="menu-link menu-link-cta"
+                          <a href="venues" class="menu-link">Venue Hire</a>
+                          <a href="contact" class="menu-link">Contact</a>
+                          <a href="membership" class="menu-link menu-link-cta"
                             >Become a Member</a
                           >
                         </div>
@@ -384,7 +384,7 @@
                           Queensland since 1967.
                         </p>
                       </div>
-                      <a href="/contact" class="button is-icon w-inline-block"
+                      <a href="contact" class="button is-icon w-inline-block"
                         ><div class="clip">
                           <div class="button-text">
                             <div class="text-size-tiny text-color-black">
@@ -940,7 +940,7 @@
                           </p>
                         </div>
                       </div>
-                      <a href="/venues" class="button is-icon w-inline-block"
+                      <a href="venues" class="button is-icon w-inline-block"
                         ><div class="clip">
                           <div class="button-text">
                             <div class="text-size-tiny text-color-black">
@@ -1362,7 +1362,7 @@
                       <div role="listitem" class="w-dyn-item">
                         <a
                           data-w-id="391b8dc0-d02e-b52a-dd6d-07e1c81dc05a"
-                          href="/venues/napa-valley"
+                          href="heritage-hall.html"
                           class="home-venue-item w-inline-block"
                           ><div class="home-venue-grid">
                             <h3
@@ -1450,7 +1450,7 @@
                       <div role="listitem" class="w-dyn-item">
                         <a
                           data-w-id="391b8dc0-d02e-b52a-dd6d-07e1c81dc05a"
-                          href="/venues/sonoma"
+                          href="lower-house.html"
                           class="home-venue-item w-inline-block"
                           ><div class="home-venue-grid">
                             <h3
@@ -1538,7 +1538,7 @@
                       <div role="listitem" class="w-dyn-item">
                         <a
                           data-w-id="391b8dc0-d02e-b52a-dd6d-07e1c81dc05a"
-                          href="/venues/st-helena"
+                          href="members-lounge.html"
                           class="home-venue-item w-inline-block"
                           ><div class="home-venue-grid">
                             <h3
@@ -1626,7 +1626,7 @@
                       <div role="listitem" class="w-dyn-item">
                         <a
                           data-w-id="391b8dc0-d02e-b52a-dd6d-07e1c81dc05a"
-                          href="/venues/santa-rosa"
+                          href="mesic-fields.html"
                           class="home-venue-item w-inline-block"
                           ><div class="home-venue-grid">
                             <h3
@@ -2535,7 +2535,7 @@
                           </p>
                         </div>
                       </div>
-                      <a href="/venues" class="button is-icon w-inline-block"
+                      <a href="venues" class="button is-icon w-inline-block"
                         ><div class="clip">
                           <div class="button-text">
                             <div class="text-size-tiny text-color-black">
@@ -2691,7 +2691,7 @@
                           Our facilities cater to weddings, conferences, and celebrations of all sizes — complete with catering options and attentive service.
                         </p>
                       </div>
-                      <a href="/contact" class="button is-icon w-inline-block"
+                      <a href="contact" class="button is-icon w-inline-block"
                         ><div class="clip">
                           <div class="button-text">
                             <div class="text-size-tiny text-color-black">
@@ -2739,7 +2739,7 @@
                 >
                   <a
                     id="w-node-_97509895-6aaf-b95e-26d1-65b5faf435fc-faf435f2"
-                    href="/"
+                    href=""
                     aria-current="page"
                     class="footer-brand w-inline-block w--current"
                     style="width: fit-content !important;"
@@ -2765,17 +2765,17 @@
                 </div>
                 <div class="footer-menu">
                   <a
-                    href="/"
+                    href=""
                     aria-current="page"
                     class="fotter-menu-link w-inline-block w--current"
                     ><p class="text-size-small">Home</p></a
-                  ><a href="/venues" class="fotter-menu-link w-inline-block"
+                  ><a href="venues" class="fotter-menu-link w-inline-block"
                     ><p class="text-size-small">Venues</p></a
-                  ><a href="/services" class="fotter-menu-link w-inline-block"
+                  ><a href="services" class="fotter-menu-link w-inline-block"
                     ><p class="text-size-small">History</p></a
-                  ><a href="/about" class="fotter-menu-link w-inline-block"
+                  ><a href="about" class="fotter-menu-link w-inline-block"
                     ><p class="text-size-small">About</p></a
-                  ><a href="/contact" class="fotter-menu-link w-inline-block"
+                  ><a href="contact" class="fotter-menu-link w-inline-block"
                     ><p class="text-size-small">Contact</p></a
                   >
                 </div>
