url fixes total

--- a/index.html
+++ b/index.html
@@ -178,10 +178,10 @@
                         <!-- header row: close + language selector -->
                         <div class="menu-header">
                           <div class="menu-lang-select">
-                            <a href="/hr" class="lang-button lang-button-active"
+                            <a href="hr" class="lang-button lang-button-active"
                               >HR</a
                             >
-                            <a href="/en" class="lang-button">EN</a>
+                            <a href="en" class="lang-button">EN</a>
                           </div>
 
                           <button
