--- a/zlatni-dukati-dance-group.html
+++ b/zlatni-dukati-dance-group.html
@@ -64,7 +64,7 @@
               >
                 <div class="padding-horizontal padding-medium">
                   <div class="navbar-left">
-                    <a href="/" class="navbar-brand w-nav-brand"
+                    <a href="" class="navbar-brand w-nav-brand"
                       ><img
                         src="football/images/63dafb782a1772a608ec1da5_WeVenue%20logo%20dark.svg"
                         loading="lazy"
@@ -82,7 +82,7 @@
                 <div class="padding-horizontal padding-medium">
                   <nav role="navigation" class="navbar-right w-nav-menu">
                     <a
-                      href="/services"
+                      href="services"
                       class="button is-icon hide-tablet w-inline-block"
                       ><div class="clip">
                         <div class="button-text">
@@ -129,8 +129,8 @@
     <!-- header row: close + language selector -->
     <div class="menu-header">
       <div class="menu-lang-select">
-        <a href="/hr" class="lang-button lang-button-active">HR</a>
-        <a href="/en" class="lang-button">EN</a>
+        <a href="hr" class="lang-button lang-button-active">HR</a>
+        <a href="en" class="lang-button">EN</a>
       </div>
 
       <button class="menu-close-button" aria-label="Close menu">
@@ -144,14 +144,14 @@
 
     <!-- main nav links -->
     <div class="menu-links">
-      <a href="/" class="menu-link">Home</a>
-      <a href="/about" class="menu-link">About</a>
-      <a href="/history" class="menu-link">History of Club</a>
-      <a href="/brisbane-knights-football-club.html" class="menu-link">Brisbane Knights Soccer Team</a>
-      <a href="/zlatni-du kati" class="menu-link">Zlatni Dukati Dance Group</a>
-      <a href="/venues" class="menu-link">Venue Hire</a>
-      <a href="/contact" class="menu-link">Contact</a>
-      <a href="/membership" class="menu-link menu-link-cta">Become a Member</a>
+      <a href="" class="menu-link">Home</a>
+      <a href="about" class="menu-link">About</a>
+      <a href="history" class="menu-link">History of Club</a>
+      <a href="brisbane-knights-football-club.html" class="menu-link">Brisbane Knights Soccer Team</a>
+      <a href="zlatni-du kati" class="menu-link">Zlatni Dukati Dance Group</a>
+      <a href="venues" class="menu-link">Venue Hire</a>
+      <a href="contact" class="menu-link">Contact</a>
+      <a href="membership" class="menu-link menu-link-cta">Become a Member</a>
     </div>
 
     <!-- footer / socials -->
@@ -221,7 +221,7 @@
                   <div class="padding-horizontal padding-medium">
                     <a
                       data-w-id="3818d32b-ae4b-350e-56e0-f13168d002d4"
-                      href="/contact"
+                      href="contact"
                       class="venue-toggle-content w-inline-block"
                       ><div class="clip">
                         <div
@@ -996,7 +996,7 @@
                           </a>
                           </p>
                         </div>
-                        <a href="/contact" class="button is-icon w-inline-block"
+                        <a href="contact" class="button is-icon w-inline-block"
                           ><div class="clip">
                             <div class="button-text">
                               <div class="text-size-tiny text-color-black">
@@ -1067,7 +1067,7 @@
                 >
                   <a
                     id="w-node-_97509895-6aaf-b95e-26d1-65b5faf435fc-faf435f2"
-                    href="/"
+                    href=""
                     class="footer-brand w-inline-block"
                     style="width: fit-content !important;"
                     >Brisbane Croatian Club</a>
@@ -1091,15 +1091,15 @@
                   </div>
                 </div>
                 <div class="footer-menu">
-                  <a href="/" class="fotter-menu-link w-inline-block"
+                  <a href="" class="fotter-menu-link w-inline-block"
                     ><p class="text-size-small">Home</p></a
-                  ><a href="/venues" class="fotter-menu-link w-inline-block"
+                  ><a href="venues" class="fotter-menu-link w-inline-block"
                     ><p class="text-size-small">Venues</p></a
-                  ><a href="/services" class="fotter-menu-link w-inline-block"
+                  ><a href="services" class="fotter-menu-link w-inline-block"
                     ><p class="text-size-small">History</p></a
-                  ><a href="/about" class="fotter-menu-link w-inline-block"
+                  ><a href="about" class="fotter-menu-link w-inline-block"
                     ><p class="text-size-small">About</p></a
-                  ><a href="/contact" class="fotter-menu-link w-inline-block"
+                  ><a href="contact" class="fotter-menu-link w-inline-block"
                     ><p class="text-size-small">Contact</p></a
                   >
                 </div>
