--- a/about.html
+++ b/about.html
@@ -64,7 +64,7 @@
               >
                 <div class="padding-horizontal padding-medium">
                   <div class="navbar-left">
-                    <a href="/" class="navbar-brand w-nav-brand"
+                    <a href="" class="navbar-brand w-nav-brand"
                       ><img
                         src="about/images/63dafb782a1772a608ec1da5_WeVenue%20logo%20dark.svg"
                         loading="lazy"
@@ -82,7 +82,7 @@
                 <div class="padding-horizontal padding-medium">
                   <nav role="navigation" class="navbar-right w-nav-menu">
                     <a
-                      href="/services"
+                      href="services"
                       class="button is-icon hide-tablet w-inline-block"
                       ><div class="clip">
                         <div class="button-text">
@@ -130,10 +130,10 @@
                         <!-- header row: close + language selector -->
                         <div class="menu-header">
                           <div class="menu-lang-select">
-                            <a href="/hr" class="lang-button lang-button-active"
+                            <a href="hr" class="lang-button lang-button-active"
                               >HR</a
                             >
-                            <a href="/en" class="lang-button">EN</a>
+                            <a href="en" class="lang-button">EN</a>
                           </div>
 
                           <button
@@ -150,20 +150,20 @@
 
                         <!-- main nav links -->
                         <div class="menu-links">
-                          <a href="/" class="menu-link">Home</a>
-                          <a href="/about" class="menu-link">About</a>
-                          <a href="/history" class="menu-link"
+                          <a href="" class="menu-link">Home</a>
+                          <a href="about" class="menu-link">About</a>
+                          <a href="history" class="menu-link"
                             >History of Club</a
                           >
-                          <a href="/brisbane-knights-football-club.html" class="menu-link"
+                          <a href="brisbane-knights-football-club.html" class="menu-link"
                             >Brisbane Knights Soccer Team</a
                           >
-                          <a href="/zlatni-dukati-dance-group.html" class="menu-link"
+                          <a href="zlatni-dukati-dance-group.html" class="menu-link"
                             >Zlatni Dukati Dance Group</a
                           >
-                          <a href="/venues" class="menu-link">Venue Hire</a>
-                          <a href="/contact" class="menu-link">Contact</a>
-                          <a href="/membership" class="menu-link menu-link-cta"
+                          <a href="venues" class="menu-link">Venue Hire</a>
+                          <a href="contact" class="menu-link">Contact</a>
+                          <a href="membership" class="menu-link menu-link-cta"
                             >Become a Member</a
                           >
                         </div>
@@ -372,7 +372,7 @@
                         celebration.
                       </p>
                     </div>
-                    <a href="/contact" class="button is-icon w-inline-block"
+                    <a href="contact" class="button is-icon w-inline-block"
                       ><div class="clip">
                         <div class="button-text">
                           <div class="text-size-tiny text-color-black">
@@ -647,7 +647,7 @@
                             Brisbane’s heart.
                           </p>
                         </div>
-                        <a href="/contact" class="button is-icon w-inline-block"
+                        <a href="contact" class="button is-icon w-inline-block"
                           ><div class="clip">
                             <div class="button-text">
                               <div class="text-size-tiny text-color-black">
@@ -742,7 +742,7 @@
                 >
                   <a
                     id="w-node-_97509895-6aaf-b95e-26d1-65b5faf435fc-faf435f2"
-                    href="/"
+                    href=""
                     class="footer-brand w-inline-block"
                     style="width: fit-content !important"
                     >Brisbane Croatian Club</a
@@ -767,18 +767,18 @@
                   </div>
                 </div>
                 <div class="footer-menu">
-                  <a href="/" class="fotter-menu-link w-inline-block"
+                  <a href="" class="fotter-menu-link w-inline-block"
                     ><p class="text-size-small">Home</p></a
-                  ><a href="/venues" class="fotter-menu-link w-inline-block"
+                  ><a href="venues" class="fotter-menu-link w-inline-block"
                     ><p class="text-size-small">Venues</p></a
-                  ><a href="/services" class="fotter-menu-link w-inline-block"
+                  ><a href="services" class="fotter-menu-link w-inline-block"
                     ><p class="text-size-small">History</p></a
                   ><a
-                    href="/about"
+                    href="about"
                     aria-current="page"
                     class="fotter-menu-link w-inline-block w--current"
                     ><p class="text-size-small">About</p></a
-                  ><a href="/contact" class="fotter-menu-link w-inline-block"
+                  ><a href="contact" class="fotter-menu-link w-inline-block"
                     ><p class="text-size-small">Contact</p></a
                   >
                 </div>
