--- a/venues.html
+++ b/venues.html
@@ -287,7 +287,7 @@
                       <div class="location-item-grid">
                         <a
                           data-w-id="924505b8-f8fe-2228-7661-08348496af2e"
-                          href="venues/napa-valley"
+                          href="heritage-hall.html"
                           class="location-item-link w-inline-block"
                           ><div
                             id="w-node-_74272d95-055c-10af-d7c1-43a23beef1b1-e2a29326"
@@ -385,7 +385,7 @@
                       <div class="location-item-grid">
                         <a
                           data-w-id="924505b8-f8fe-2228-7661-08348496af2e"
-                          href="venues/sonoma"
+                          href="lower-house.html"
                           class="location-item-link w-inline-block"
                           ><div
                             id="w-node-_74272d95-055c-10af-d7c1-43a23beef1b1-e2a29326"
@@ -483,7 +483,7 @@
                       <div class="location-item-grid">
                         <a
                           data-w-id="924505b8-f8fe-2228-7661-08348496af2e"
-                          href="venues/st-helena"
+                          href="members-lounge.html"
                           class="location-item-link w-inline-block"
                           ><div
                             id="w-node-_74272d95-055c-10af-d7c1-43a23beef1b1-e2a29326"
@@ -581,7 +581,7 @@
                       <div class="location-item-grid">
                         <a
                           data-w-id="924505b8-f8fe-2228-7661-08348496af2e"
-                          href="venues/santa-rosa"
+                          href="mesic-fields.html"
                           class="location-item-link w-inline-block"
                           ><div
                             id="w-node-_74272d95-055c-10af-d7c1-43a23beef1b1-e2a29326"
