--- a/heritage-hall.html
+++ b/heritage-hall.html
@@ -64,17 +64,8 @@
               >
                 <div class="padding-horizontal padding-medium">
                   <div class="navbar-left">
-                    <a href="" class="navbar-brand w-nav-brand"
-                      ><img
-                        src="football/images/63dafb782a1772a608ec1da5_WeVenue%20logo%20dark.svg"
-                        loading="lazy"
-                        alt="WeVenue Logo."
-                        class="dark-logo" /><img
-                        src="football/images/63dafb0e2a1772da8eec1616_WeVenue%20Logo.svg"
-                        loading="lazy"
-                        alt="WeVenue Logo."
-                        class="light-logo"
-                    /></a>
+                    <a href="" class="navbar-brand w-nav-brand" style="width: fit-content !important;"
+                      >Brisbane Croatian Club</a>
                   </div>
                 </div>
               </div>
