--- a/venues.html
+++ b/venues.html
@@ -64,7 +64,7 @@
               >
                 <div class="padding-horizontal padding-medium">
                   <div class="navbar-left">
-                    <a href="" class="navbar-brand w-nav-brand"
+                    <a href="" class="navbar-brand w-nav-brand" style="width: fit-content !important;"
                       >Brisbane Croatian Club</a>
                   </div>
                 </div>
