--- a/contact.html
+++ b/contact.html
@@ -42,7 +42,7 @@
     <div class="page-wrapper">
       <div class="preloader">
         <div class="clip">
-          <div class="preloader-logo"><div>WeVenue</div></div>
+          <div class="preloader-logo"><div>Croatian Club</div></div>
           <div class="preloader-logo preloader-bottom"><div>Contact</div></div>
         </div>
       </div>
