final change contact

--- a/contact.html
+++ b/contact.html
@@ -219,18 +219,20 @@
               >
                 <div class="home-hero-strip">
                   <div class="rotate-text">
-                    <div class="text-size-xsmall">Wine country</div>
-                    <div class="text-size-xsmall">Four locations</div>
-                    <div class="text-size-xsmall">Wine country</div>
-                    <div class="text-size-xsmall">Four locations</div>
-                    <div class="text-size-xsmall">Wine country</div>
+                    <div class="text-size-xsmall">Brisbane Croatian Club</div>
+                        <div class="text-size-xsmall">Brisbane Croatian Club</div>
+                        <div class="text-size-xsmall">Brisbane Croatian Club</div>
+                        <div class="text-size-xsmall">Brisbane Croatian Club</div>
+                        <div class="text-size-xsmall">Brisbane Croatian Club</div>
+                        <div class="text-size-xsmall">Brisbane Croatian Club</div>
                   </div>
                   <div class="rotate-text">
-                    <div class="text-size-xsmall">Wine country</div>
-                    <div class="text-size-xsmall">Four locations</div>
-                    <div class="text-size-xsmall">Wine country</div>
-                    <div class="text-size-xsmall">Four locations</div>
-                    <div class="text-size-xsmall">Wine country</div>
+                    <div class="text-size-xsmall">Brisbane Croatian Club</div>
+                        <div class="text-size-xsmall">Brisbane Croatian Club</div>
+                        <div class="text-size-xsmall">Brisbane Croatian Club</div>
+                        <div class="text-size-xsmall">Brisbane Croatian Club</div>
+                        <div class="text-size-xsmall">Brisbane Croatian Club</div>
+                        <div class="text-size-xsmall">Brisbane Croatian Club</div>
                   </div>
                 </div>
               </div>
@@ -548,12 +550,6 @@
                             ><div class="text-size-small">
                               General questions
                             </div></a
-                          ><a
-                            data-w-tab="Tab 3"
-                            class="contact-tab-link w-inline-block w-tab-link"
-                            ><div class="text-size-small">
-                              Schedule a tour
-                            </div></a
                           >
                         </div>
                         <div class="into-view-6 w-tab-content">
@@ -835,11 +831,8 @@
                     id="w-node-_97509895-6aaf-b95e-26d1-65b5faf435fc-faf435f2"
                     href="/"
                     class="footer-brand w-inline-block"
-                    ><img
-                      src="contact/images/63dafb782a1772a608ec1da5_WeVenue%20logo%20dark.svg"
-                      loading="lazy"
-                      alt="WeVenue Logo."
-                  /></a>
+                    style="width: fit-content !important;"
+                    >Brisbane Croatian Club</a>
                   <div class="footer-social">
                     <a
                       href="https://twitter.com/Tycreated"
@@ -865,7 +858,7 @@
                   ><a href="/venues" class="fotter-menu-link w-inline-block"
                     ><p class="text-size-small">Venues</p></a
                   ><a href="/services" class="fotter-menu-link w-inline-block"
-                    ><p class="text-size-small">Services</p></a
+                    ><p class="text-size-small">History</p></a
                   ><a href="/about" class="fotter-menu-link w-inline-block"
                     ><p class="text-size-small">About</p></a
                   ><a
@@ -881,13 +874,8 @@
                   id="w-node-_1fe868b8-605b-63fd-502a-b59ee4263b93-faf435f2"
                   class="text-size-tiny text-color-grey"
                 >
-                  © 2023
-                  <a
-                    href="https://webflow.com/@tycreated"
-                    target="_blank"
-                    class="text-link"
-                    >ThatTemplate</a
-                  >
+                  © 2025
+                  
                 </div>
                 <div
                   id="w-node-fe1758d6-198d-d89e-e083-2ca47a89aaa6-faf435f2"
