--- a/contact.html
+++ b/contact.html
@@ -617,7 +617,7 @@
                                           maxlength="256"
                                           name="Phone"
                                           data-name="Phone"
-                                          placeholder="(555) 555-5555"
+                                          placeholder="(+61) xxx-xxx-xxx"
                                           type="tel"
                                           id="Phone-2"
                                         />
@@ -637,7 +637,7 @@
                                           maxlength="256"
                                           name="Phone-5"
                                           data-name="Phone 5"
-                                          placeholder="(555) 555-5555"
+                                          placeholder="xxxxxxxxxx@gmail.com"
                                           type="tel"
                                           id="Phone-5"
                                         />
